fix(post title): text overflow problem

--- a/source/css/_files/posts.scss
+++ b/source/css/_files/posts.scss
@@ -16,6 +16,7 @@ $main-class: theme-posts;
   padding-bottom: 16px;
   * {
     overflow: visible;
+    white-space: normal;
   }
   .#{$sub-class}__media {
     $sub-sub-class: #{$sub-class}__media;
